--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,27 @@
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit">Search</button>
     </form>
+    <div class="gallery">
+      <!-- Карточки изображений -->
+      <!--<div class="photo-card">
+        <img src="" alt="" loading="lazy" />
+        <div class="info">
+          <p class="info-item">
+            <b>Likes</b>
+          </p>
+          <p class="info-item">
+            <b>Views</b>
+          </p>
+          <p class="info-item">
+            <b>Comments</b>
+          </p>
+          <p class="info-item">
+            <b>Downloads</b>
+          </p>
+        </div>
+      </div>-->
+    </div>
+    <button type="button" class="load-more">Load more</button>
+    <script src="./index.js"></script>
   </body>
 </html>
